tests/lean/bad_pattern2.lean.expected.out
bad_pattern2.lean:2:2: error: invalid pattern variable 'bla.boo', it must be an atomic identifier
